[package]
name = "dopio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
plotters = "*"
plotters-canvas = "*"

wasm-bindgen = {version = "0.2.81", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.31"

serde = { version = "*", features = ["derive"] }
serde_json = "*"



[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]